--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,16 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=web/WEB-INF/lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.commons-codec-1.6.jar=lib/commons-codec-1.6.jar
+file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
+file.reference.httpasyncclient-4.0.2.jar=lib/httpasyncclient-4.0.2.jar
+file.reference.httpclient-4.3.6.jar=lib/httpclient-4.3.6.jar
+file.reference.httpcore-4.3.3.jar=lib/httpcore-4.3.3.jar
+file.reference.httpcore-nio-4.3.2.jar=lib/httpcore-nio-4.3.2.jar
+file.reference.httpmime-4.3.6.jar=lib/httpmime-4.3.6.jar
+file.reference.json-20140107.jar=lib/json-20140107.jar
+file.reference.okhttp-2.7.5.jar=lib/okhttp-2.7.5.jar
+file.reference.unirest-java-1.4.7.jar=lib/unirest-java-1.4.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +47,16 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.json-20140107.jar}:\
+    ${file.reference.unirest-java-1.4.7.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.httpasyncclient-4.0.2.jar}:\
+    ${file.reference.httpclient-4.3.6.jar}:\
+    ${file.reference.httpcore-4.3.3.jar}:\
+    ${file.reference.httpcore-nio-4.3.2.jar}:\
+    ${file.reference.httpmime-4.3.6.jar}:\
+    ${file.reference.okhttp-2.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -65,7 +83,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
