--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.home=/opt/apache-tomcat-8.0.15
 j2ee.server.instance=tomcat80:home=/opt/apache-tomcat-8.0.15:base=apache-tomcat-8.0.15.0_base
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=/home/gman/.netbeans/8.0.2/build.properties
